--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,10 @@ h1 {
    top: 50%;
    text-align: center;
 }
+
+.load {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-items:center;
+}
