--- a/src/Pages/Styles/Skills.scss
+++ b/src/Pages/Styles/Skills.scss
@@ -1,5 +1,6 @@
 $breakpoints: (
-    "mob": "(max-width: 300px)",
+    "mob": "(max-width: 400px)",
+    "rmob": "(max-width: 300px)",
     "sm": "(max-width: 500px )",
     "md": "(min-width: 601px) and (max-width: 1000px )",
     "md-lg": "(min-width:601px)" and "(max-width:770px)",
@@ -31,6 +32,9 @@ $breakpoints: (
     margin-bottom: 1px;
     font-size: 32px;
     text-decoration: underline;
+    @include breakpoint(rmob) {
+        font-size: 24px;
+      }
 }
 
 .icon-half {
@@ -42,11 +46,17 @@ $breakpoints: (
     height: 55px;
     width: 55px;
     margin: 5px 20px;
+    @include breakpoint(rmob) {
+      height: 35px;
+    }
 }
 
 .icon-skill {
     display: grid;
     place-items: center;
+    span {
+        font-size: 14px;
+    }
 }
 
 .next {
