--- a/src/Styles/global.scss
+++ b/src/Styles/global.scss
@@ -1,5 +1,6 @@
 $breakpoints: (
-    "mob": "(max-width: 300px)",
+    "mob": "(max-width: 400px)",
+    "rmob": "(max-width: 300px)",    
     "sm": "(max-width: 500px )",
     "md": "(min-width: 601px) and (max-width: 1000px )",
     "md-lg": "(min-width:601px)" and "(max-width:770px)",
@@ -36,6 +37,12 @@ $breakpoints: (
     src: url(../Fonts//helvetica-255-cufonfonts/Helvetica.ttf);
 }
 
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 body{
     background-color:#08111E;
     background-attachment: fixed;
@@ -60,6 +67,9 @@ body{
         top: 52px;
         left: 86px;
     }
+    @include breakpoint(rmob){
+        display: none;
+    }
 }
 
 .top-left {
@@ -75,6 +85,9 @@ body{
     @include breakpoint(mob) {
         top: -5px;
         left: -118px;        
+    }
+    @include breakpoint(rmob){
+        display: none;
     }
 }
 
@@ -92,6 +105,9 @@ body{
         top: 12px;
         left: 86px;        
     }
+    @include breakpoint(rmob){
+        display: none;
+    }
 }
 
 .bottom-left {
@@ -107,6 +123,9 @@ body{
     @include breakpoint(mob) {
         top:-45px;
         left: -141px;        
+    }
+    @include breakpoint(rmob){
+        display: none;
     }
 }
 
@@ -203,8 +222,6 @@ body{
     height: fit-content;
     text-align: center;
     h1 {
-        width: 100%;
-        height: 100%;
         display: grid;
         place-items: center;       
         height: fit-content;
@@ -218,7 +235,7 @@ body{
             font-size: 36px;
             @include breakpoint(mob) {
                 font-size: 16px;
-                margin-bottom: 20px;
+                margin-bottom: 0px;
             }
         }
         .sw {
@@ -231,8 +248,8 @@ body{
                 font-size: 17vw;
             }
             @include breakpoint(mob) {
-                font-size: 30px;
-                margin-bottom: 37px;
+                font-size: 20px;
+                margin-bottom: 18px;
             }
         }
         .tw {
@@ -250,5 +267,28 @@ body{
     }
   }
 
-  /////Header
+  .img1{
+    @include breakpoint(mob) {
+        width: 170px;
+    }
+  }
+
+  a {
+    width: fit-content;
+    height: fit-content;
+    display: block;
+  }
+
+  .typo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
   
+  .title{
+     
+    position: relative;
+    left: 50%;
+     transform: translateX(-50%);
+  }
