--- a/src/App.css
+++ b/src/App.css
@@ -56,4 +56,7 @@ h1 {
     height: 100vh;
     display: grid;
     place-items:center;
+    margin: auto;
+    /* height: fit-content;
+    width: fit-content; */
 }
